--- a/public/demo3.html
+++ b/public/demo3.html
@@ -35,7 +35,7 @@ have some fun with Materialize and its components</p>
 <img class="materialboxed materialboxed- image" src="images/livedemo.png">
 </div>
 <div class="col s12 center- align">
-<a class="waves- effect waves- light btn click- me- button" id="clickMeButton"><i class="material- icons left">auto_fix_high</i>Click Me</a>
+<a class="waves- effect waves- light btn click- me- button" id="clickMeButton"><i class="material- icons left"></i>Click Me</a>
 </div>
 </div>
 </div>
