--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,10 @@
+<!-- indexmangodb.html -->
 <!doctype html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>SIT 725 Prac 3</title>
+    <title>SIT 725 Prac 4</title>
     <meta name="description" content="basic template for SIT 725 Prac 4">
     <meta name="author" content="SitePoint">
     <meta property="og:title" content="SIT 725 Prac 4">
@@ -27,7 +28,7 @@
     <div class="container">
         <div class="row">
             <div class="col s12 center-align">
-                <h1 id="heading">Welcome to SIT 725 Week 3</h1>
+                <h1 id="heading">Welcome to SIT 725 Week 4</h1>
                 <p class="flow-text">This is a demo application that tries to use a few components from materialize and through this practical we try to
                     have some fun with Materialize and its components</p>
             </div>
@@ -38,33 +39,36 @@
                 <a class="waves-effect waves-light btn click-me-button" id="clickMeButton"><i class="material-icons left"></i>Click Me</a>
             </div>
         </div>
+        <div class="row" id="card-section">
+        </div>
+        </div>
         <div class="row">
             <!-- Modal Structure -->
-            <div id="modal1" class="modal modal-fixed-footer">
-                <div class="row modal-content">
-                    <form class="col s12">
-                        <div class="row">
-                            <div class="input-field col s6">
-                                <input placeholder="Placeholder" id="first_name" type="text" class="validate">
-                                <label for="first_name">First Name</label>
-                            </div>
-                            <div class="input-field col s6">
-                                <input id="last_name" type="text" class="validate">
-                                <label for="last_name">Last Name</label>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="input-field col s12">
-                                <input id="password" type="password" class="validate">
-                                <label for="password">Password</label>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="input-field col s12">
-                                <input id="email" type="email" class="validate">
-                                <label for="email">Email</label>
-                            </div>
-                        </div>
+            <div id="modal" class="modal modal-fixed-footer">
+				<div class="row modal-content">
+					<form class="col s12">
+						<div class="row">
+							<div class="input-field col s6">
+								<input id="title" type="text" class="validate">
+								<label for="title">title</label>
+							</div>
+							<div class="input-field col s6">
+								<input id="subTitle" type="text" class="validate">
+								<label for="subTitle">subTitle</label>
+							</div>
+						</div>
+						<div class="row">
+							<div class="input-field col s12">
+								<input id="path" type="text" class="validate">
+								<label for="path">path</label>
+							</div>
+						</div>
+						<div class="row">
+							<div class="input-field col s12">
+								<input id="description" type="text" class="validate">
+								<label for="description">description</label>
+								</div>
+						</div>
                         <div class="row">
                             <div class="input-field col s12 center-align">
                                 <a class="waves-effect waves-light btn" id="formSubmit">submit</a>
@@ -73,62 +77,14 @@
                     </form>
                 </div>
             </div>
-            <!-- First Card Section -->
-            <div class="col s4 center-align">
-                <div class="card medium">
-                    <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator" src="images/Kitten 1.jpg">
-                    </div>
-                    <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">Kitten 1<i class="material-icons right"></i></span>
-                        <p><a href="#">About this kitten</a></p>
-                    </div>
-                    <div class="card-reveal">
-                        <span class="card-title grey-text text-darken-4">Kitten<i class="material-icons right">close</i></span>
-                        <p class="card-text">Hello There! I just wanted to say HI to you guys. See ya!</p>
-                    </div>
-                </div>
-            </div>
-            <!-- Second Card Section -->
-            <div class="col s4 center-align">
-                <div class="card medium">
-                    <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator" src="images/kitten 2.jpg">
-                    </div>
-                    <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">Kitten 2<i class="material-icons right"></i></span>
-                        <p><a href="#">About this kitten</a></p>
-                    </div>
-                    <div class="card-reveal">
-                        <span class="card-title grey-text text-darken-4">Kitten<i class="material-icons right">close</i></span>
-                        <p class="card-text">Hello There! I just wanted to say HI to you guys. See ya!</p>
-                    </div>
-                </div>
-            </div>
-            <!-- Third Card Section -->
-            <div class="col s4 center-align">
-                <div class="card medium">
-                    <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator" src="images/kitten 3.jpg">
-                    </div>
-                    <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">Kitten 3<i class="material-icons right"></i></span>
-                        <p><a href="#">About this kitten</a></p>
-                    </div>
-                    <div class="card-reveal">
-                        <span class="card-title grey-text text-darken-4">Kitten<i class="material-icons right">close</i></span>
-                        <p class="card-text">Hello There! I just wanted to say HI to you guys. See ya!</p>
-                    </div>
-                </div>
-            </div>
+            
         </div>
     </div>
 </main>
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
         crossorigin="anonymous"></script>
 <!-- Compiled and minified JavaScript -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-<script src="js/scripts.js"></script>
+<script src="js/scriptmangodb.js"></script>
 </body>
 </html>
